fix: table not overflowing properly

--- a/Frontend/src/Dashboard.css
+++ b/Frontend/src/Dashboard.css
@@ -11,6 +11,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	gap: 1rem;
+	overflow-inline: auto;
 }
 
 .DashboardBody-main {
@@ -18,6 +19,7 @@
 	flex: 30rem;
 	flex-direction: column;
 	gap: 1rem;
+	overflow-inline: auto;
 }
 
 .DashboardBody-side {
